use module and flux and prepare to hit local server

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,6 +11,9 @@ a:hover{
     color:#fcc;
 }
 
-#navbar {
-  
+.home {
+  margin: auto;
+  width: 800px;
+  height: 100%;
+  background-color: white;
 }
