--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,8 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Slabo+27px);
 body{
     font-family: 'Slabo 27px', serif;
-    color: #ddd;
-    background-color: #111;
+    background-color: #AAA;
     height: 100%;
 }
 a:link, a:active, a:visited{
@@ -19,6 +18,6 @@ a:hover{
 }
 
 .homebody{
-  height: 100%;
+  padding: 10px 5px 10px 5px;
   background-color: white;
 }
