--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,13 +11,13 @@ a:hover{
     color:#fcc;
 }
 
-.home {
+.editor {
   margin: auto;
   width: 800px;
   height: 100%;
 }
 
-.homebody{
+.editorbody{
   padding: 10px 5px 10px 5px;
   background-color: white;
 }
