--- a/web/sass/flexbox.scss
+++ b/web/sass/flexbox.scss
@@ -1,13 +1,11 @@
+// Flexbox container with items arranged left to right
 .flexbox-container {
   display: flex;
   flex-flow: row nowrap;
 }
 
+// Flexbox container with items arranged top to bottom
 .flexbox-container-vertical{
   display: flex;
   flex-flow: column nowrap;
-}
-
-.flexbox-block {
-
 }
