--- a/web/sass/style.scss
+++ b/web/sass/style.scss
@@ -15,13 +15,13 @@ body{
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: none;
+  overflow: hidden;
   min-width: 800px;
 }
 
 a {
-  &:link
-  &:active
+  &:link,
+  &:active,
   &:visited{
     color: #ddd;
   }
