--- a/web/sass/style.scss
+++ b/web/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'const';
 @import 'flexbox';
+@import 'mixins';
 
 // lectern namespace
 .lt {
@@ -16,23 +17,14 @@
   @import 'filetree';
 }
 
-
-
-/*  Body
-    1. Wrap the site into one page without scrolling
- */
 body{
-  font-family: "Slabo 27px", serif;
-  color: $color-primary;
-  background-color: $background;
-  font-size: 14pt;
+  @include full-size();
 
-  // 1
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+  background-color: $background;
+  color: $color-primary;
   min-width: 800px;
+  font-family: "Slabo 27px", serif;
+  font-size: 14pt;
 }
 
 button{
@@ -63,4 +55,8 @@ button, button:focus, button:active,
 // Border and padding computed in width/height automatically
 div {
   box-sizing: border-box;
+}
+
+.body {
+  @include full-size();
 }
