--- a/sass/_const.scss
+++ b/sass/_const.scss
@@ -9,7 +9,7 @@ $color-disabled: #666;
 
 // Button styling
 $button-bg-primary: #BBB;
-$button-bg-active: #CCC;
+$button-bg-active: #0C8;
 $button-bg-disabled: #DDD;
 $button-bg-hover: #C0C0C0;
-$button-focus: #8AA;
+$button-focus: #8AB;
