--- a/sass/_filetree.scss
+++ b/sass/_filetree.scss
@@ -31,6 +31,10 @@
   &:hover {
     background-color: $button-bg-hover;
   }
+
+  &.selected {
+    background-color: $button-bg-active;
+  }
 }
 
 &-file-name__padding {
