--- a/lib/style.css
+++ b/lib/style.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
 .flexbox-container {
   display: flex;
   flex-flow: row nowrap; }
@@ -7,18 +6,32 @@
   display: flex;
   flex-flow: column nowrap; }
 
-.lt {
-  @import url(https://fonts.googleapis.com/css?family=Slabo+27px); }
-  .lt-body {
-    height: 100%;
-    margin: 0;
-    padding: 0; }
-  .lt-top-bar {
-    border-bottom: solid black 1px; }
-  .lt-content__wrapper {
-    height: 100%; }
-  .lt-content__wrapper > .lt-body-wrapper:not(:last-child) {
-    border-right: solid black 1px; }
+.main {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 1.2rem; }
+.main-head {
+  background-color: #CCCCCC;
+  width: 100%;
+  max-height: 4rem;
+  min-height: 4rem;
+  overflow: hidden; }
+.main-region {
+  position: absolute;
+  top: 4rem;
+  bottom: 0;
+  background-color: #CCCCCC;
+  overflow: hidden; }
+.main-left {
+  left: 2rem; }
+.main-right {
+  background-color: #CCCCCC;
+  right: 2rem; }
+.main-body {
+  background-color: #EEEEEE;
+  left: 2rem;
+  right: 2rem; }
 
 .et-body {
   flex: 5 5 auto; }
@@ -28,8 +41,6 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  flex: 1 1 150px;
-  border-right: solid black 1px;
   overflow-y: scroll; }
 .ft-file__list {
   list-style-type: none;
@@ -45,46 +56,63 @@
   .ft-file__name:hover {
     background-color: #C0C0C0; }
   .ft-file__name.selected {
-    background-color: #0C8; }
+    background-color: #00CC88; }
 .ft-file-name__padding {
   padding-left: 5pt;
   letter-spacing: 5pt;
-  color: #666; }
+  color: #666666; }
 .ft-file-name__content {
   text-overflow: clip;
   font-size: 14pt; }
 .ft-file-name__expand-icon {
   width: 10px; }
 
-.main {
+.lt-body {
   height: 100%;
   margin: 0;
-  overflow: hidden;
   padding: 0; }
-.main-head, .main-foot {
-  background-color: #CCCCCC; }
-.main-left {
-  overflow: scroll;
-  background-color: #CC8080; }
-.main-body {
-  background-color: #80CC80; }
-.main-right {
-  overflow: scroll;
-  background-color: #8080CC; }
+.lt-top-bar {
+  border-bottom: solid black 1px; }
+.lt-content__wrapper {
+  height: 100%; }
+.lt-content__wrapper > .lt-body-wrapper:not(:last-child) {
+  border-right: solid black 1px; }
+
+.rb-hitarea {
+  background-color: #888888;
+  border-top: none;
+  border-bottom: none;
+  border-left: 0.24rem solid #BBBBBB;
+  border-right: 0.24rem solid #BBBBBB;
+  cursor: col-resize;
+  position: absolute;
+  height: 100%;
+  width: 0.5rem; }
+.rb-hitarea__hook-right {
+  right: 0; }
+.rb-hitarea__hook-left {
+  left: 0; }
+
+.ttb {
+  position: absolute;
+  top: 4rem;
+  bottom: 0;
+  width: 2rem; }
+.ttb__left {
+  background-color: #CC80CC;
+  left: 0; }
+.ttb__right {
+  background-color: #80CCCC;
+  right: 0; }
 
 body {
   height: 100%;
   margin: 0;
-  overflow: hidden;
   padding: 0;
-  background-color: #CCC;
-  color: #000;
+  background-color: #CCCCCC;
+  color: #000000;
   min-width: 800px;
-  font-family: "Slabo 27px", serif;
-  font-size: 14pt; }
-
-button {
-  font-family: "Slabo 27px", serif; }
+  font-size: 62.5%; }
 
 a:link, a:active, a:visited {
   color: #ddd; }
@@ -103,5 +131,7 @@ div {
 .body {
   height: 100%;
   margin: 0;
-  overflow: hidden;
   padding: 0; }
+
+p {
+  margin: 0; }
